# google-pubsub-rpc-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.rs
protos/: example.proto  pubsub.proto
